# timelapse

./: .gitignore  README.md  Untitled.ipynb  main-capture.ipynb  main-convert.ipynb  main.ipynb  pyproject.toml  requirements.txt  setup.py  test.ipynb
notebooks/: main-capture.ipynb  main-convert.ipynb  test.ipynb
timelapse/: camera.py  convert.py  main.py  utils.py
timelapse.egg-info/: PKG-INFO  SOURCES.txt
