[tool.poetry]
name = "timelapse"
version = "0.1.0"
description = "Create a timelapse with a webcam on your Raspberry Pi!"
authors = ["fpgmaas"]

[tool.poetry.dependencies]
python = "~3.7"
numpy = "^1.20.2"
pillow = "^8.2.0"
opencv-python = "^4.5.1"
ipykernel = "^5.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
